tap/ops/auth-server-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: $TAP_AUTH_SERVER_NAME
  namespace: $TAP_DEV_NAMESPACE
spec:
  selector:
    app.kubernetes.io/part-of: $TAP_AUTH_SERVER_NAME
    app.kubernetes.io/component: authorization-server
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: $TAP_AUTH_SERVER_NAME
  namespace: $TAP_DEV_NAMESPACE
spec:
  routes:
    - conditions:
        - prefix: /
      services:
        - name: $TAP_AUTH_SERVER_NAME
          port: 80
  virtualhost:
    corsPolicy:
      allowOrigin:
        - "*"
      allowMethods:
        - "*"
      allowHeaders:
        - "*"
    fqdn: $TAP_AUTH_SERVER_NAME-$TAP_DEV_NAMESPACE.$TAP_DEV_ENVIRONMENT.$TAP_MASTER_DOMAIN
    tls:
      secretName: $TAP_AUTH_SERVER_SECRET_NAME
